samples/_failures_safe/1761393428_e90c99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5abf592.c: In function ‘main’:
./samples/SAFE/__tmp_c5abf592.c:150:5: error: expected identifier or ‘(’ at end of input
  150 |     int
      |     ^~~
./samples/SAFE/__tmp_c5abf592.c:150:5: error: expected declaration or statement at end of input
